--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "ai-calendar2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
-  }
+	"name": "ai-calendar2",
+	"description": "A.I. powered calendar interface. Add, remove, manipulate events using an LLM prompt.",
+	"version": "0.1.0",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@heroicons/react": "^2.1.5",
+		"@react-spring/web": "^9.7.4",
+		"clndr2": "^2.1.0",
+		"ejs": "^3.1.10",
+		"next": "^14.2.13",
+		"react": "^18",
+		"react-dom": "^18",
+		"typechat": "^0.1.1"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.9",
+		"@types/ejs": "^3.1.5",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.13",
+		"postcss": "^8",
+		"sass": "^1.79.3",
+		"tailwindcss": "^3.4.12",
+		"typescript": "^5"
+	}
 }
