--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.19.0",
 		"@heroicons/react": "^2.1.5",
 		"@react-spring/web": "^9.7.4",
 		"clndr2": "^2.1.0",
@@ -16,6 +17,7 @@
 		"next": "^14.2.13",
 		"react": "^18",
 		"react-dom": "^18",
+		"ts-json-schema-generator": "^2.3.0",
 		"typechat": "^0.1.1"
 	},
 	"devDependencies": {
