--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"ts-json-schema-generator": "^2.3.0",
-		"typechat": "^0.1.1"
+		"typechat": "^0.1.1",
+		"zustand": "^5.0.0-rc.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.9",
